src/styles/components/ProfileSidebar.scss
@import "../variables";

.profile-sidebar {
  max-width: 290px;
  width: 100%;
  padding: 30px;
  border: 1px solid #565656;
  border-radius: 30px;
  overflow: hidden;
  margin-top: 20px;
  text-align: center;
  p {
    font-size: 14px;
    line-height: 20px;
    color: white;
    margin-bottom: 30px;
  }
  .profile-img {
    max-width: 250px;
    width: 100%;
    border-radius: 30px;
    overflow: hidden;
    margin: auto;
    margin-bottom: 46px;
    max-height: 210px;
    img {
      filter: grayscale(100%);
    }
  }
  h2 {
    font-size: 24px;
    line-height: 29px;
    color: white;
    font-weight: 300;
    margin-bottom: 0.5rem;
  }
  .profile-socials {
    display: flex;
    gap: 8px;
    margin-bottom: 30px;
    margin-top: 24px;
    justify-content: center;
    align-items: center;
    a {
      color: #999;
      border: 2px solid #565656;
      border-radius: 50%;
      height: 50px;
      display: flex;
      width: 50px;
      justify-content: center;
      align-items: center;
      font-size: 20px;
      &:hover {
        color: $green;
        border-color: $green;
      }
    }
  }
  .button{
    background-color: $green;
    display: block;
    color: black;
    text-align: center;
    padding: 11px 58px 10px 58px;
    border-radius: 30px;
    text-transform: uppercase;
    border: 2px solid $green;
    &:hover{
      background: transparent;
      color: $green;
    }
    svg{
      margin-right: 10px;
      
    }
  }
}


@media screen and (max-width:1220px) {
  .profile-sidebar{
    max-width: 707px;
    margin-left: auto;
    margin-right: auto;
  }
}

